hphp/hack/test/typecheck/reactive/rx_unresolved_byval_collection3.php.exp
File "rx_unresolved_byval_collection3.php", line 12, characters 3-12:
This object's property is being mutated(used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
