hphp/hack/test/typecheck/reactive/rx_unresolved_byval_collection3.php
<?hh // strict

<<__Rx>>
function f<Tv as arraykey>(bool $c, Tv $v): mixed {
  $result = varray[];
  if ($c) {
    $result[] = $v;
  } else {
    $result = Vector { $v };
  }
  // ERROR
  $result[0] = $v;
  return $result;
}
